--- a/stylenba.css
+++ b/stylenba.css
@@ -153,23 +153,10 @@
         }
         .search-input::placeholder {
             color: rgba(255, 255, 255, 0.5);
-            }
-
-.bottom-nav {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: space-around;
-  background-color: #10013d; /* Dark background */
-  padding: 5px;
-  border-top: 2px solid #333; /* Darker border for contrast */
-  z-index: 1000;
-  transition: background-color 0.3s ease-in-out;
+            
     }
 
-    #footer {
+    .footer {
       margin-top: 50px;
       font-size: 10px;
       font-weight: bolder;
@@ -177,12 +164,12 @@
       margin-bottom: 20px;
     }
 
-    #footer a {
+    .footer a {
       color: #03a819;
       text-decoration: none;
     }
 
-    #footer a:hover {
+    .footer a:hover {
       text-decoration: underline;
     }
 
