--- a/stylenba.css
+++ b/stylenba.css
@@ -155,6 +155,16 @@
             color: rgba(255, 255, 255, 0.5);
             
     }
+.nav-item {
+  color: #07ded7; /* Light gray text for better contrast */
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  flex-grow: 1;
+  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out, text-shadow 0.3s ease-in-out; /* Added text-shadow transition */
+  position: relative;
+}
+
 .nav-item i {
   display: block;
   font-size: 18px;
